# raamattu.app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  example.env  migrate.Dockerfile  package-lock.json  package.json  static  todo.md
db/: initial_migration.sh  raamattu.pgsql.tar.xz
raamattu/: Cargo.toml  jsconfig.json
raamattu-be/: Cargo.toml  Dockerfile
raamattu-be/src/: main.rs
raamattu-be/src/database/: mod.rs  query_book_list.rs  query_book_meta.rs  query_books_by_short_name.rs  query_map_translation_book_names.rs  query_translations.rs  query_verses.rs
raamattu-be/src/error/: database_error.rs  language_error.rs  mod.rs
raamattu-be/src/handlers/: get_alternative_translations_for_book.rs  get_book_list.rs  get_books_by_short_name.rs  get_chapter_verses.rs  get_num_chapters_for_book.rs  get_translations.rs  mod.rs
raamattu-be/src/state/: backend_state.rs  mod.rs
raamattu-db/: Cargo.toml
raamattu-db/src/: error.rs  lib.rs  references.rs  types.rs
raamattu-db/src/db/: books.rs  client.rs  mod.rs
raamattu-fe/: .gitignore  Cargo.toml  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
raamattu-fe/locales/: locales.yaml
raamattu-fe/src/: main.rs  rust-toolchain.toml  tailwind.css
raamattu-fe/src/assets/: fonts.css
raamattu-fe/src/components/: book_list.rs  button.rs  dropdown.rs  link_button.rs  link_button_container.rs  loading_or_error.rs  mod.rs  options.rs  rim.rs  search_bar.rs  title.rs
raamattu-fe/src/context/: application_options.rs  mod.rs  options_context.rs
raamattu-fe/src/error/: book_list_error.rs  client_error.rs  mod.rs  net_error.rs  server_error.rs
raamattu-fe/src/hooks/: mod.rs  use_application_options.rs  use_bible_translation.rs  use_book_chapter_count.rs  use_book_list.rs  use_book_translations.rs  use_chapter.rs  use_cross_translations.rs  use_route_parser.rs  use_translation.rs
raamattu-fe/src/pages/: chapter_page.rs  chapter_view_page.rs  chapters_enumeration_page.rs  front_page.rs  mod.rs
raamattu-fe/src/routes/: routes.rs
raamattu-test/: Cargo.toml  Dockerfile
raamattu-test/docker-helpers/: .gitignore  gc-dl.sh
raamattu-test/src/: main.rs  test_front_page.rs
raamattu/locales/: app.yml
raamattu/scripts/: db_transform.py  remove_junk.py
raamattu/src/: application_state.rs  error.rs  main.rs  query_params.rs
raamattu/src/database/: db.rs  getters.rs  mod.rs
raamattu/src/handlers/: about.rs  front_page.rs  mod.rs  search_help.rs
raamattu/src/handlers/filters/: localise.rs  mod.rs
raamattu/src/search/: mod.rs  search.rs  verse.rs
raamattu/src/serve_static/: mod.rs  serve_static.rs
raamattu/src/sitemap/: mod.rs
raamattu/src/templates/: chapter_number_page.rs  chapter_page.rs  frontpage.rs  mod.rs
raamattu/src/utility/: error_response.rs
raamattu/static/: script.js  sitemap.xml  styles.css
raamattu/templates/: about.jinja  base.jinja  chapter_page.jinja  chapters_page.jinja  error.jinja  front_page.jinja  search.jinja  search_help.jinja
