[package]
name = "raamattu-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "*", features = ["tokio", "http2", "json", "macros"] }
tower = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["full"] }
tokio = { version = "1", features = ["default", "rt-multi-thread"] }
sqlx = { version = "0", features = ["runtime-tokio", "postgres"] }
serde_json = { version = "1", features = [
  "std",
  "alloc",
  "default",
  "preserve_order",
] }
serde = { version = "1", features = ["derive"] }
