[package]
name = "raamattu-db"
description = "Raamattu database interactions and serialization."
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
unicode-segmentation = "1.12.0"
sqlx = { version="0.8.2", features = ["postgres", "runtime-tokio"] }
itertools = "0.13.0"
