[package]
name = "raamattu-fe"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
web-sys = { version = "0.3", features = [
  "HtmlSelectElement",
  "HtmlOptionElement",
  "Event",
] }
rust-i18n = "3.1.2"
serde = { version = "1", features = ["default", "derive", "std"] }
serde_json = { version = "*" }
gloo-net = { version = "*", features = ["http", "serde_json"] }
gloo-storage = { version = "0.3" }
wasm-bindgen-futures = "0.4"
wasm-logger = "*"
log = "*"
wasm-bindgen = "*"
yew_icons = { version = "0.8", features = [
  "HeroiconsSolidHome",
  "HeroiconsSolidBackward",
  "HeroiconsSolidForward",
] }
gloo = { version = "0.11" }
