[package]
name = "raamattu"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version="1.41.1", features=["full"]}
axum = { version="0.7.9", features=["http2", "tokio", "macros"] }
sqlx = { version="0.8.2", features = ["macros", "postgres", "runtime-tokio", "any"] }
askama = { version="0.12.1", features=["with-axum"] }
askama_axum = "0.4.0"
itertools = "0.13.0"
serde = { version="1.0.2", features=["derive"]}
serde_json = "1.0.1"
tower = {version="0.5", features=["full"]}
tower-http = {version= "0.6.2", features=["full"]}
axum-extra = { version = "0.10.0-alpha.1", features = ["query"] }
tantivy = { version="0.22.0" }
tantivy-tokenizer-api = { version="0.3.0" }
tantivy-stemmers = { version="0.4.0", features=["finnish"] }
sitemap-rs = "0.2.2"
chrono = { version = "0.4.38", features = ["now"] }
url = "2.5.4"
dotenv = "0.15.0"
rust-i18n = "3.1.2"
anyhow = "1.0.93"
# raamattu-db = { path = "../raamattu-db" }

